WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102385
[CSS Regions] Absolutely positioned regions do not expand to fill their container
https://bugs.webkit.org/show_bug.cgi?id=102385
Summary
[CSS Regions] Absolutely positioned regions do not expand to fill their conta...
Mihai Balan
Reported
2012-11-15 07:00:39 PST
Created
attachment 174428
[details]
HTML file highlighting the problem When a region is absolutely positioned (position: absolute) and sized by specifying all four of top, left, bottom, right it should size to the size of its containing block. Instead, it "collapses" to a zero-height region.
Attachments
HTML file highlighting the problem
(1.71 KB, text/html)
2012-11-15 07:00 PST
,
Mihai Balan
no flags
Details
Patch
(14.38 KB, patch)
2012-11-23 23:11 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch for landing
(17.72 KB, patch)
2012-11-27 01:07 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch for landing
(17.67 KB, patch)
2012-11-27 04:38 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2012-11-23 23:11:02 PST
Created
attachment 175851
[details]
Patch
Julien Chaffraix
Comment 2
2012-11-26 11:13:34 PST
Comment on
attachment 175851
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175851&action=review
> LayoutTests/ChangeLog:3 > + [CSS Regions] Absolutely positioned region does not expand to fill its container
Nit: The name sounds weird to me (non-native English speaker though), either missing a leading "An" or a generic plural (Absolutely positioned regions do not ...). Also the name could be improved: you are fixing the case where you have set your logical height and we wouldn't be expanding in the logical width.
> LayoutTests/fast/regions/autosize-abspos-anchoredregion.html:6 > + .region { -webkit-flow-from: flow; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: green; }
You are over-constraining your region in most cases below as you have top & bottom, left & right set at the same time, which forces the size of your element.
> LayoutTests/fast/regions/autosize-abspos-anchoredregion.html:19 > + </style>
A good addition would be a vertical writing-mode test for that too.
Mihnea Ovidenie
Comment 3
2012-11-27 01:07:28 PST
Created
attachment 176194
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-11-27 02:20:15 PST
Comment on
attachment 176194
[details]
Patch for landing Rejecting
attachment 176194
[details]
from commit-queue. New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html Full output:
http://queues.webkit.org/results/14982976
Mihnea Ovidenie
Comment 5
2012-11-27 04:38:58 PST
Created
attachment 176233
[details]
Patch for landing
Mihnea Ovidenie
Comment 6
2012-11-27 04:39:32 PST
(In reply to
comment #4
)
> (From update of
attachment 176194
[details]
) > Rejecting
attachment 176194
[details]
from commit-queue. > > New failing tests: > inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html > Full output:
http://queues.webkit.org/results/14982976
Unrelated, trying again.
WebKit Review Bot
Comment 7
2012-11-27 05:23:58 PST
Comment on
attachment 176233
[details]
Patch for landing Clearing flags on attachment: 176233 Committed
r135851
: <
http://trac.webkit.org/changeset/135851
>
WebKit Review Bot
Comment 8
2012-11-27 05:24:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug