[CSS Regions] Absolutely positioned regions do not expand to fill their container https://bugs.webkit.org/show_bug.cgi?id=102385

Reviewed by Julien Chaffraix.

Source/WebCore:

In the case of an absolutely positioned region with height auto, height computation should follow
the path of block elements instead of replaced elements.

Tests: fast/regions/autosize-abspos-anchoredregion-vertlr.html
       fast/regions/autosize-abspos-anchoredregion.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePositionedLogicalHeight): Skip replaced element height computation when a region has height auto.
* rendering/RenderRegion.h:
(WebCore::RenderRegion::shouldHaveAutoLogicalHeight): Make it private since it is not accessed from outside.

LayoutTests:

Added new tests for the case of an absolutely positioned region inside a container. The region is anchored and it should expand to the container limits
in the anchored direction.
Also modified expectations for another test that has absolutely positioned auto-height regions, which now have height computed properly.

* fast/regions/autosize-abspos-anchoredregion-expected.txt: Added.
* fast/regions/autosize-abspos-anchoredregion-vertlr-expected.txt: Added.
* fast/regions/autosize-abspos-anchoredregion-vertlr.html: Added.
* fast/regions/autosize-abspos-anchoredregion.html: Added.
* platform/chromium/fast/regions/autoheight-regions-mark-expected.txt:
* platform/efl/fast/regions/autoheight-regions-mark-expected.txt:
* platform/gtk/fast/regions/autoheight-regions-mark-expected.txt:
* platform/mac/fast/regions/autoheight-regions-mark-expected.txt:
* platform/qt/fast/regions/autoheight-regions-mark-expected.txt:


Canonical link: https://commits.webkit.org/121498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135851 268f45cc-cd09-0410-ab3c-d52691b4dbfc